# cryptor-rs

./: Cargo.toml
src/: args.rs  encryption.rs  main.rs
